[package]
name = "tflo-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Operator catalog for the tflo CEP engine — windowed, statistical, stateful, detector, math, and composite operators"
license.workspace = true
repository.workspace = true
keywords = ["streaming", "operators", "cep", "temporal", "finance"]
categories = ["algorithms"]

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
