[package]
name = "tflo-rhai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rhai scripting integration for tflo"
license.workspace = true
repository.workspace = true
keywords = ["rhai", "scripting", "streaming", "temporal"]
categories = ["config", "parsing"]

[dependencies]
tflo-core = { workspace = true }
rhai = "1.19"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
