[package]
name = "tflo-sink-influx"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "InfluxDB sink for tflo: line-protocol formatter + batching wrapper + pluggable HTTP backend"
license.workspace = true
repository.workspace = true
keywords = ["influxdb", "tsdb", "metrics", "sink"]
categories = ["data-structures", "asynchronous"]

[features]
default = []
async = ["tflo-core/async", "dep:tokio", "dep:futures", "dep:async-trait"]

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true, features = ["rt", "macros", "time"] }
futures = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
