[package]
name = "tflo-state-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "File-based state store backend for tflo checkpoints"
license.workspace = true
repository.workspace = true
keywords = ["state", "checkpoint", "filesystem"]
categories = ["data-structures"]

[features]
default = []
# Enable the AsyncStateStore impl (Phase 1). Pulls in tokio for spawn_blocking
# so the sync file I/O does not block an async runtime thread.
async = ["tflo-core/async", "dep:async-trait", "dep:tokio"]

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
async-trait = { version = "0.1", optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread"] }

[lints]
workspace = true
