[package]
name = "tflo-state-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "S3-compatible object store backend for tflo checkpoints"
license.workspace = true
repository.workspace = true
keywords = ["state", "checkpoint", "s3", "object-store"]
categories = ["data-structures"]

[features]
default = []
# Phase 1 path: implements tflo-core's AsyncStateStore directly, no block_on.
async = ["tflo-core/async", "dep:tokio"]

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
hex = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
