[package]
name = "tflo-state-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "S3-compatible object store backend for tflo checkpoints"
license.workspace = true
repository.workspace = true
keywords = ["state", "checkpoint", "s3", "object-store"]
categories = ["data-structures"]

[features]
default = []
# Phase 1 path: implements tflo-core's AsyncStateStore directly, no block_on.
async = ["tflo-core/async", "dep:tokio"]
# Opt-in: adapter-level integration tests against a real S3-compatible server
# (localstack via testcontainers). Requires Docker on the host.
integration-tests = []

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
hex = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
# aws-sdk / aws-smithy crates >= a recent point release bumped their MSRV
# to 1.91 (workspace MSRV is currently 1.88), so we cap each transitive at
# the last 1.88-compatible version. Drop these caps when the workspace MSRV
# moves; tflo-state-s3/Cargo.toml is the single chokepoint for them.
aws-sdk-s3 = { version = ">=1.59, <1.123", features = ["behavior-version-latest"] }
aws-config = { version = ">=1.5, <1.8.14", features = ["behavior-version-latest"] }
aws-credential-types = ">=1.2, <1.2.12"
aws-smithy-async = ">=1.2, <1.2.12"
aws-smithy-checksums = ">=0.64, <0.64.4"
aws-smithy-eventstream = ">=0.60, <0.60.19"
aws-smithy-http = ">=0.63, <0.63.4"
aws-smithy-http-client = ">=1.1, <1.1.10"
aws-smithy-json = ">=0.62, <0.62.4"
aws-smithy-observability = ">=0.2, <0.2.5"
aws-smithy-query = ">=0.60, <0.60.14"
aws-smithy-runtime = ">=1.9, <1.10.1"
aws-smithy-runtime-api = ">=1.11, <1.11.4"
aws-smithy-types = ">=1.3, <1.4.4"
aws-smithy-xml = ">=0.60, <0.60.14"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
