[package]
name = "tflo-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WebAssembly bindings for tflo — streaming technical analysis in the browser"
license.workspace = true
repository.workspace = true
keywords = ["wasm", "webassembly", "streaming", "technical-analysis", "trading"]
categories = ["wasm", "science::robust"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tflo-core = { path = "../tflo-core" }
tflo-ops = { path = "../tflo-ops" }
tflo-fintech = { path = "../tflo-fintech" }
tflo-cel = { path = "../tflo-cel" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
