[package]
name = "tflo-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WebAssembly bindings for tflo — streaming technical analysis in the browser"
license.workspace = true
repository.workspace = true
keywords = ["wasm", "webassembly", "streaming", "technical-analysis", "trading"]
categories = ["wasm", "science::robust"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# CEL rule evaluation (evaluate_rules / evaluate_rules_from_yaml). Off by
# default so the math-only `ops` bundle ships without the CEL interpreter —
# that's the difference between a ~150 KB and a ~2.5 MB wasm artifact. The
# `@tflo/react/cel` entry builds with `--features cel`.
cel = ["dep:tflo-cel"]

[dependencies]
tflo-core = { path = "../tflo-core" }
tflo-ops = { path = "../tflo-ops" }
tflo-fintech = { path = "../tflo-fintech" }
tflo-cel = { path = "../tflo-cel", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

# Disable wasm-pack's built-in wasm-opt pass: it ignores per-profile flags,
# defaults to `-O`, and `-O` without `--enable-bulk-memory` rejects the
# memory.copy ops rustc emits. build-wasm.sh runs `wasm-opt -Oz
# --enable-bulk-memory` manually instead.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
